att escala e musicas p 25/06/2023

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
-      <span class="data">18/06/2023</span>
+      <span class="data">25/06/2023</span>
     </div>
     <ul class="escala-lista">
       <li>Violão <p>Julio</p>
-        <p>Vinicius</p>
+        <p>Letycia</p>
       </li>
       <li>Baixo <p>Viviane</p>
       </li>
-      <li>Guitarra <p>Letycia</p>
+      <li>Guitarra <p>Vicente</p>
       </li>
       <li>Som <p> </p>
       </li>
@@ -64,34 +64,34 @@
       <ul class="musica-lista">
         
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Tua Obra em Nós</span></p>
-            <p class="lista-titulo"> <strong>Autor</strong><span>Projeto Sola</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Espirito, enche a minha vida</span></p>
+            <p class="lista-titulo"> <strong>Autor</strong><span>Quatro por um</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/projeto-sola/tua-obra-em-nos/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/quatro-por-um/espirito-enche-minha-vida/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=bPiMH3Mh1ao">Acessar
+                href="https://www.youtube.com/watch?v=3Y0ewwo1b50">Acessar
                 Vídeo</a></p>
           </div>
         </li>
           <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Isaias 53</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Projeto Sola</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Só tenho a ti</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Vineyard</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/projeto-sola/isaias-53/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/vineyard/so-tenho-a-ti/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=bvki6GuGsn0">Acessar
+                href="https://www.youtube.com/watch?v=iHyJ7mYHLVs">Acessar
                 Vídeo</a></p>
           </div>
         </li>  <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Ele é exaltado</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Adhemar de Campos</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Maravilhosa Graça</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Drops</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/adhemar-de-campos/ele-exaltado/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/drops-gl-adolescentes/maravilhosa-graca/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=22c5Flzd8Iw">Acessar
+                href="https://www.youtube.com/watch?v=nv-T2_JPKZA&t=1s">Acessar
                 Vídeo</a></p>
           </div>
         </li>  <li>
