att escala e musicas p 02/07/2023

--- a/index.html
+++ b/index.html
@@ -33,22 +33,21 @@
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
-      <span class="data">25/06/2023</span>
+      <span class="data">02/07/2023</span>
     </div>
     <ul class="escala-lista">
       <li>Violão <p>Julio</p>
-        <p>Letycia</p>
+        <p>Vicente</p>
       </li>
       <li>Baixo <p>Viviane</p>
       </li>
-      <li>Guitarra <p>Vicente</p>
+      <li>Guitarra <p>Vinicius</p>
       </li>
       <li>Som <p> </p>
       </li>
       <li>Bateria <p>Vitor</p>
       </li>
       <li>Voz
-        <p>Elizete</p>
         <p>Eliseu</p>
         <p>Brendinha</p>
       </li>
@@ -62,7 +61,18 @@
     </div>
     <div>
       <ul class="musica-lista">
-        
+
+        <li>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Préludio (Agnus Dei)</span></p>
+            <p class="lista-titulo"> <strong>Autor</strong><span>David Quinlan</span></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/david-quinlan/agnus-dei/">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=csIeNzdl0E0&t=87s">Acessar
+                Vídeo</a></p>
+          </div>
+        </li>
         <li>
           <p class="lista-titulo"> <strong>Nome</strong><span>Espirito, enche a minha vida</span></p>
             <p class="lista-titulo"> <strong>Autor</strong><span>Quatro por um</span></p>
@@ -84,24 +94,26 @@
                 href="https://www.youtube.com/watch?v=iHyJ7mYHLVs">Acessar
                 Vídeo</a></p>
           </div>
-        </li>  <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Maravilhosa Graça</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Drops</span></p>
+        </li>  
+        <li>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Deus é Deus</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Delino Marçal</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/drops-gl-adolescentes/maravilhosa-graca/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/delino-marcal/deus--deus/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=nv-T2_JPKZA&t=1s">Acessar
+                href="https://www.youtube.com/watch?v=ybyIkyD4N_0">Acessar
                 Vídeo</a></p>
           </div>
-        </li>  <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Teu Amor não falha</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Nívea Soares</span></p>
+        </li>
+        <li>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Tu és bom</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Adoração e Adoradores</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/nivea-soares/teu-amor-nao-falha/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/adoracao-e-adoradores/tu-es-bom/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=3q-pRKf-VaQ">Acessar
+                href="https://www.youtube.com/watch?v=BZCb92bivGA&t=26s">Acessar
                 Vídeo</a></p>
           </div>
         </li>
