add article introducaoAviso

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
     <h1>UMA FAMÍLIA EM CRESCIMENTO</h1>
     <h2>Louvor IPJK</h2>
   </main>
+
+  //----------------------AVISO DE REUNIÃO------------------------------------
+   <article class="introducaoAviso">   
+    <h3 class="tituloAviso"> atenção.</h3>
+    <p class="paragrafoAviso">No dia <strong>15/07</strong> será nossa reunião na casa do <strong>PR. Mario</strong> às <strong>19:00</strong>.
+      <br>Teremos um churrasco americano e <strong>sua presença</strong> é muito importante, não deixe de participar!</p>
+  </article>
+  
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
