--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h2>Louvor IPJK</h2>
   </main>
 
-  //----------------------AVISO DE REUNIÃO------------------------------------
+  /*----------------------AVISO DE REUNIÃO------------------------------------*/
    <article class="introducaoAviso">   
     <h3 class="tituloAviso"> atenção.</h3>
     <p class="paragrafoAviso">No dia <strong>15/07</strong> será nossa reunião na casa do <strong>PR. Mario</strong> às <strong>19:00</strong>.
