algumas alterações de espaços e cores

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
     <h2>Louvor IPJK</h2>
   </main>
 
-   <article class="introducaoAviso">   
-    <h3 class="tituloAviso"> atenção.</h3>
-    <p class="paragrafoAviso">No dia <strong>15/07</strong> será nossa reunião na casa do <strong>PR. Mario</strong> às <strong>19:00</strong>.
+   <article class="aviso">  
+    <div class="introducaoAviso"> 
+    <h3 class="tituloAviso"> comunicado.</h3>
+    <p class="paragrafoAviso">No dia <strong>15/07</strong> será nossa reunião na casa do <strong>PR. Mario</strong> às <strong>19:00h</strong>.
       <br>Teremos um churrasco americano e <strong>sua presença</strong> é muito importante, não deixe de participar!</p>
+    </div>
   </article>
   
   <section class="escala" id="escala" aria-label="Escala">
