add popup aviso

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 </head>
 
 <body>
+
+  <div id="overlay" class="overlay"></div>
+  <div id="popup" class="popup">
+    <div class="popup-content introducaoAviso">
+      <h3 class="tituloAviso"> comunicado.</h3>
+      <p class="paragrafoAviso">No dia <strong>15/07</strong> será nossa reunião na casa do <strong>PR. Mario</strong> às <strong>19:00h</strong>.
+        <br>Teremos um churrasco americano e <strong>sua presença</strong> é muito importante, não deixe de participar!</p>
+      <button id="close-btn" class="botaoAviso">OK</button>
+    </div>
+  </div>
+  
   <header class="header">
     <img src="./svg/ipjk logo.svg" alt="Igreja Presbiteriana do Jk">
     <nav>
@@ -31,13 +42,13 @@
     <h2>Louvor IPJK</h2>
   </main>
 
-   <article class="aviso">  
+   <!-- <article class="aviso">  
     <div class="introducaoAviso"> 
     <h3 class="tituloAviso"> comunicado.</h3>
     <p class="paragrafoAviso">No dia <strong>15/07</strong> será nossa reunião na casa do <strong>PR. Mario</strong> às <strong>19:00h</strong>.
       <br>Teremos um churrasco americano e <strong>sua presença</strong> é muito importante, não deixe de participar!</p>
     </div>
-  </article>
+  </article> -->
   
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
@@ -182,6 +193,7 @@
       <span>2023 © Igreja Presbiteriana do JK - Todos os direitos reservados.</span>
     </div>
   </footer>
+<script src="./script.js"></script>
 </body>
 
 </html>
