att escala e musicas p dia 09/02/2023

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
-      <span class="data">02/07/2023</span>
+      <span class="data">09/07/2023</span>
     </div>
     <ul class="escala-lista">
       <li>Violão <p>Julio</p>
-        <p>Vicente</p>
+        <p>Letycia</p>
       </li>
       <li>Baixo <p>Viviane</p>
       </li>
@@ -69,7 +69,7 @@
       </li>
       <li>Voz
         <p>Eliseu</p>
-        <p>Brendinha</p>
+        <p>Daniele</p>
       </li>
       <li>Slide <p>Nicolas</p>
       </li>
@@ -82,7 +82,7 @@
     <div>
       <ul class="musica-lista">
 
-        <li>
+        <!-- <li>
           <p class="lista-titulo"> <strong>Nome</strong><span>Préludio (Agnus Dei)</span></p>
             <p class="lista-titulo"> <strong>Autor</strong><span>David Quinlan</span></p>
           <div class="musica-link">
@@ -92,48 +92,48 @@
                 href="https://www.youtube.com/watch?v=csIeNzdl0E0&t=87s">Acessar
                 Vídeo</a></p>
           </div>
-        </li>
+        </li> -->
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Espirito, enche a minha vida</span></p>
-            <p class="lista-titulo"> <strong>Autor</strong><span>Quatro por um</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Isaias 53</span></p>
+            <p class="lista-titulo"> <strong>Autor</strong><span>Projeto Sola</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/quatro-por-um/espirito-enche-minha-vida/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/projeto-sola/isaias-53/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=3Y0ewwo1b50">Acessar
+                href="https://www.youtube.com/watch?v=bvki6GuGsn0">Acessar
                 Vídeo</a></p>
           </div>
         </li>
           <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Só tenho a ti</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Vim para adorar-te</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Adoração e adoradores</span></p>
+          <div class="musica-link">
+            <p class="lista-titulo"> <strong>Cifra Club</strong><a
+                href="https://www.cifraclub.com.br/adoracao-e-adoradores/vim-para-adorar-te/">Acessar Cifra</a></p>
+            <p class="lista-titulo"> <strong>Youtube</strong><a
+                href="https://www.youtube.com/watch?v=ACX1VtGoeg8">Acessar
+                Vídeo</a></p>
+          </div>
+        </li>  
+        <li>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Só tenho a Ti</span></p>
           <p class="lista-titulo"> <strong>Autor</strong><span>Vineyard</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
                 href="https://www.cifraclub.com.br/vineyard/so-tenho-a-ti/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=iHyJ7mYHLVs">Acessar
-                Vídeo</a></p>
-          </div>
-        </li>  
-        <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Deus é Deus</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Delino Marçal</span></p>
-          <div class="musica-link">
-            <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/delino-marcal/deus--deus/">Acessar Cifra</a></p>
-            <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=ybyIkyD4N_0">Acessar
+                href="https://www.youtube.com/watch?v=iHyJ7mYHLVs&t=11s">Acessar
                 Vídeo</a></p>
           </div>
         </li>
         <li>
-          <p class="lista-titulo"> <strong>Nome</strong><span>Tu és bom</span></p>
-          <p class="lista-titulo"> <strong>Autor</strong><span>Adoração e Adoradores</span></p>
+          <p class="lista-titulo"> <strong>Nome</strong><span>Hosana</span></p>
+          <p class="lista-titulo"> <strong>Autor</strong><span>Mariana Valadão</span></p>
           <div class="musica-link">
             <p class="lista-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/adoracao-e-adoradores/tu-es-bom/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/mariana-valadao/hosana/">Acessar Cifra</a></p>
             <p class="lista-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=BZCb92bivGA&t=26s">Acessar
+                href="https://www.youtube.com/watch?v=qJ5RspI6gOY">Acessar
                 Vídeo</a></p>
           </div>
         </li>
