corrigido js links desktop

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <img src="./svg/ipjk logo.svg" alt="Igreja Presbiteriana do Jk">
     <nav>
       <ul class="header-menu">
-        <li><a href="#escala">Escala</a></li>
-        <li><a href="#musica">Música</a></li>
-        <li><a href="#organizacao">Organização</a></li>
+        <li><a href="#escala" class="scroll-link">Escala</a></li>
+        <li><a href="#musica" class="scroll-link">Música</a></li>
+        <li><a href="#organizacao" class="scroll-link">Organização</a></li>
       </ul>
     </nav>
   </header>
@@ -42,13 +42,6 @@
     <h2>Louvor IPJK</h2>
   </main>
 
-   <!-- <article class="aviso">  
-    <div class="introducaoAviso"> 
-    <h3 class="tituloAviso"> comunicado.</h3>
-    <p class="paragrafoAviso">No dia <strong>15/07</strong> será nossa reunião na casa do <strong>PR. Mario</strong> às <strong>19:00h</strong>.
-      <br>Teremos um churrasco americano e <strong>sua presença</strong> é muito importante, não deixe de participar!</p>
-    </div>
-  </article> -->
   
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
