--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <img src="./svg/ipjk logo.svg" alt="Igreja Presbiteriana do Jk">
     <nav>
       <ul class="header-menu">
-        <li><a href="#escala" class="scroll-link">Escala</a></li>
-        <li><a href="#musica" class="scroll-link">Música</a></li>
-        <li><a href="#organizacao" class="scroll-link">Organização</a></li>
+        <li><a href="#escala" class="scroll-link nav-link active">Escala</a></li>
+        <li><a href="#musica" class="scroll-link nav-link">Música</a></li>
+        <li><a href="#organizacao" class="scroll-link nav-link">Organização</a></li>
       </ul>
     </nav>
   </header>
