--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       </li>
       <li>Slide <p>Nicolas</p>
       </li>
+      <li>Teclado <p></p>
+      </li>
     </ul>
   </section>
   <section class="musica" id="musica" aria-label="Músicas">
