--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.min.css">
+  <!-- <link rel="stylesheet" href="./css/style.css"> -->
   <link rel="stylesheet" href="./css/introducaoAviso.css">
   <link rel="stylesheet" href="./css/popup.css">
   <link rel="icon" href="./svg/ipb favicon.svg" type="image/svg+xml">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
-    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;500&family=Poppins:wght@400;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> -->
   <title>Igreja Presbiteriana JK</title>
 </head>
 
@@ -30,7 +32,7 @@
   </div>
   
   <header class="header">
-    <img src="./svg/ipjk logo.svg" alt="Igreja Presbiteriana do Jk">
+    <img src="./svg/ipjk logo.svg" alt="Igreja Presbiteriana do Jk" >
     <nav>
       <ul class="header-menu">
         <li><a href="#escala" class="scroll-link nav-link active">Escala</a></li>
