--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.min.css">
-  <!-- <link rel="stylesheet" href="./css/style.css"> -->
+  <!-- <link rel="stylesheet" href="./css/style.min.css"> -->
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/introducaoAviso.css">
   <link rel="stylesheet" href="./css/popup.css">
   <link rel="icon" href="./svg/ipb favicon.svg" type="image/svg+xml">
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;500&family=Poppins:wght@400;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> -->
   <title>Igreja Presbiteriana JK</title>
 </head>
 
@@ -81,7 +75,7 @@
     <div>
       <ul class="musica-lista">
         <li>
-          <p class="lista-titulo"> <strong>Isaias 53</strong><span>Projeto Sola</span></p>
+          <p class="lista-titulo">Isaias 53<span>Projeto Sola</span></p>
           <div class="musica-link">
             <p class="link-titulo"> <strong>Cifra Club</strong><a
                 href="https://www.cifraclub.com.br/projeto-sola/isaias-53/">Acessar Cifra</a></p>
@@ -91,7 +85,7 @@
           </div>
         </li>
           <li>
-          <p class="lista-titulo"> <strong>Vim para Adorar-te</strong><span>Adoração e adoradores</span></p>
+          <p class="lista-titulo"> Vim para Adorar-te<span>Adoração e adoradores</span></p>
           <div class="musica-link">
             <p class="link-titulo"> <strong>Cifra Club</strong><a
                 href="https://www.cifraclub.com.br/adoracao-e-adoradores/vim-para-adorar-te/">Acessar Cifra</a></p>
@@ -101,7 +95,7 @@
           </div>
         </li>  
         <li>
-          <p class="lista-titulo"> <strong>Só tenho a Ti</strong><span>Vineyard</span></p>
+          <p class="lista-titulo"> Só tenho a Ti<span>Vineyard</span></p>
           <div class="musica-link">
             <p class="link-titulo"> <strong>Cifra Club</strong><a
                 href="https://www.cifraclub.com.br/vineyard/so-tenho-a-ti/">Acessar Cifra</a></p>
@@ -111,7 +105,7 @@
           </div>
         </li>
         <li>
-          <p class="lista-titulo"> <strong>Hosana</strong><span>Mariana Valadao</span></p>
+          <p class="lista-titulo"> Hosana<span>Mariana Valadao</span></p>
           <div class="musica-link">
             <p class="link-titulo"> <strong>Cifra Club</strong><a
                 href="https://www.cifraclub.com.br/mariana-valadao/hosana/">Acessar Cifra</a></p>
