--- a/index.html
+++ b/index.html
@@ -122,16 +122,28 @@
     </div>
   </section>
   
+
+
 <section class="sugestao" id="sugestao" aria-label="Sugestão">
-  <div class="sugestao-titulo">
-  <h3 class="tituloh3">sugestões<span class="decoration">.</span></h3>
-  <div> 
-  <label for="textInput">Digite aqui a sugestão de música</label>
-</div>  
-  <input type="text" id="textInput">
-    <button id="sendButton">Enviar</button>
-    <ul id="textList"></ul>
+  <div class="sugestaoTitulo">
+      <h3 class="tituloh3">sugestões<span class="decoration">.</span></h3>
   </div>
+  
+      <p class="sugestaoTexto">Aqui você pode sugerir músicas para todos nós conhecermos e aprendermos. 
+      <br>
+      </p>
+      
+      <div class="sugestaoInput"> 
+        <label for="textInput">Envie aqui sua sugestão:</label>
+        <input type="text" id="textInput" class="textInput">
+      </div>  
+      <div class="divBotao">
+        <button id="sendButton" class="sugestaoBotao">Sugerir</button>
+      </div>
+      <div class="sugestaoLista">
+        <h3>Músicas Sugeridas</h3>
+        <ul id="textList"></ul>
+      </div> 
   
   </section>
 
