att cores e imagens

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
     </div>
   </div>
   
-  <header class="header">
+  <header class="header-bg">
+  <div class="header">
+    <div class="header-imagem">
     <img src="./svg/ipjk logo.svg" alt="Igreja Presbiteriana do Jk" >
+    </div>
     <nav>
       <ul class="header-menu">
         <li><a href="#escala" class="scroll-link nav-link active">Escala</a></li>
@@ -36,7 +39,7 @@
       </ul>
     </nav>
   </header>
-
+</div>
   <main class="introducao">
     <h1>UMA FAMÍLIA EM CRESCIMENTO</h1>
     <h2>Louvor IPJK</h2>
@@ -138,7 +141,7 @@
         <input type="text" id="textInput" class="textInput">
       </div>  
       <div class="divBotao">
-        <button id="sendButton" class="sugestaoBotao">Sugerir</button>
+        <button id="sendButton" class="sugestaoBotao">Sugerir Música</button>
       </div>
       <div class="sugestaoLista">
         <h3>Músicas Sugeridas</h3>
