alterações em cores

--- a/index.html
+++ b/index.html
@@ -127,18 +127,18 @@
   
 
 
-<section class="sugestao" id="sugestao" aria-label="Sugestão">
+<section class="sugestao-bg" id="sugestao" aria-label="Sugestão">
+  <div class="sugestao">
+  
   <div class="sugestaoTitulo">
       <h3 class="tituloh3">sugestões<span class="decoration">.</span></h3>
   </div>
   
-      <p class="sugestaoTexto">Aqui você pode sugerir músicas para todos nós conhecermos e aprendermos. 
-      <br>
-      </p>
-      
+      <!-- <p class="sugestaoTexto">Aqui você pode sugerir músicas 
+      </p> -->
       <div class="sugestaoInput"> 
-        <label for="textInput">Envie aqui sua sugestão:</label>
-        <input type="text" id="textInput" class="textInput">
+        <label for="textInput">Aqui você pode sugerir músicas</label>
+        <input type="text" id="textInput" class="textInput" placeholder="Digite aqui sua sugestão">
       </div>  
       <div class="divBotao">
         <button id="sendButton" class="sugestaoBotao">Sugerir Música</button>
@@ -147,7 +147,7 @@
         <h3>Músicas Sugeridas</h3>
         <ul id="textList"></ul>
       </div> 
-  
+    </div>
   </section>
 
 
@@ -198,8 +198,8 @@
     </ul>
   </section>
 
-  <footer class="footer">
-    <div class="footer-container">
+  <footer class="footer-bg">
+    <div class="footer footer-container">
       <img src="./svg/ipb icone.svg" alt="">
       <span>2023 © Igreja Presbiteriana do JK - Todos os direitos reservados.</span>
     </div>
