att musicas e escala p dia 16/07

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
-      <span class="data">09/07/2023</span>
+      <span class="data">16/07/2023</span>
     </div>
     <ul class="escala-lista">
       <li>Violão <p>Julio</p>
-        <p>Letycia</p>
+        <p>Samira</p>
       </li>
       <li>Baixo <p>Viviane</p>
       </li>
@@ -64,7 +64,7 @@
       <li>Bateria <p>Vitor</p>
       </li>
       <li>Voz
-        <p>Eliseu</p>
+        <p>Brendinha</p>
         <p>Daniele</p>
       </li>
       <li>Slide <p>Nicolas</p>
@@ -77,47 +77,47 @@
   <section class="musica" id="musica" aria-label="Músicas">
     <div class="musica-titulo">
       <h3 class="tituloh3">música<span class="decoration">.</span></h3>
-      <span class="data">09/07/2023</span>
+      <span class="data">16/07/2023</span>
     </div>
     <div>
       <ul class="musica-lista">
         <li>
-          <p class="lista-titulo">Isaias 53<span>Projeto Sola</span></p>
+          <p class="lista-titulo">Canção do Apocalipse<span>Diante do Trono</span></p>
           <div class="musica-link">
             <p class="link-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/projeto-sola/isaias-53/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/diante-do-trono/cancao-do-apocalipse/">Acessar Cifra</a></p>
             <p class="link-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=bvki6GuGsn0">Acessar
+                href="https://www.youtube.com/watch?v=G9BRa5e_T5g">Acessar
                 Vídeo</a></p>
           </div>
         </li>
           <li>
-          <p class="lista-titulo"> Vim para Adorar-te<span>Adoração e adoradores</span></p>
+          <p class="lista-titulo">Ele é exaltado<span>Adoração e adoradores</span></p>
           <div class="musica-link">
             <p class="link-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/adoracao-e-adoradores/vim-para-adorar-te/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/adhemar-de-campos/ele-exaltado/">Acessar Cifra</a></p>
             <p class="link-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=ACX1VtGoeg8">Acessar
+                href="https://www.youtube.com/watch?v=22c5Flzd8Iw&t=76s">Acessar
                 Vídeo</a></p>
           </div>
         </li>  
         <li>
-          <p class="lista-titulo"> Só tenho a Ti<span>Vineyard</span></p>
+          <p class="lista-titulo">Ousado amor<span>Isaias Saad</span></p>
           <div class="musica-link">
             <p class="link-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/vineyard/so-tenho-a-ti/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/isaias-saad/ousado-amor/">Acessar Cifra</a></p>
             <p class="link-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=iHyJ7mYHLVs&t=11s">Acessar
+                href="https://www.youtube.com/watch?v=wSKKEAnLTDw&t=23s">Acessar
                 Vídeo</a></p>
           </div>
         </li>
         <li>
-          <p class="lista-titulo"> Hosana<span>Mariana Valadao</span></p>
+          <p class="lista-titulo">Venha sobre nós<span>Canto verbo</span></p>
           <div class="musica-link">
             <p class="link-titulo"> <strong>Cifra Club</strong><a
-                href="https://www.cifraclub.com.br/mariana-valadao/hosana/">Acessar Cifra</a></p>
+                href="https://www.cifraclub.com.br/canto-verbo/venha-sobre-nos/">Acessar Cifra</a></p>
             <p class="link-titulo"> <strong>Youtube</strong><a
-                href="https://www.youtube.com/watch?v=qJ5RspI6gOY">Acessar
+                href="https://www.youtube.com/watch?v=mIVfpbkDBLc">Acessar
                 Vídeo</a></p>
           </div>
         </li>
