correção nome cantor

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
         </li>
           <li>
-          <p class="lista-titulo">Ele é exaltado<span>Adoração e adoradores</span></p>
+          <p class="lista-titulo">Ele é exaltado<span>Adhemar de Campos</span></p>
           <div class="musica-link">
             <p class="link-titulo"> <strong>Cifra Club</strong><a
                 href="https://www.cifraclub.com.br/adhemar-de-campos/ele-exaltado/">Acessar Cifra</a></p>
