add config admin

--- a/index.html
+++ b/index.html
@@ -51,26 +51,9 @@
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
       <span class="data">16/07/2023</span>
     </div>
+
     <ul class="escala-lista">
-      <li>Violão <p>Julio</p>
-        <p>Samira</p>
-      </li>
-      <li>Baixo <p>Viviane</p>
-      </li>
-      <li>Guitarra <p>Vinicius</p>
-      </li>
-      <li>Som <p> </p>
-      </li>
-      <li>Bateria <p>Vitor</p>
-      </li>
-      <li>Voz
-        <p>Brendinha</p>
-        <p>Daniele</p>
-      </li>
-      <li>Slide <p>Nicolas</p>
-      </li>
-      <li>Teclado <p></p>
-      </li>
+     
     </ul>
   </section>
 
@@ -209,7 +192,10 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
   
 </body>
+
 <script src="./config.js"></script>
+<!-- <script src="./admin.js"></script> -->
+<script src="./main.js"></script>
 <script src="./sugestao.js"></script>
 <script src="./script.js"></script>
 </html>
