add login e alterar musica

--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@
 </body>
 
 <script src="./config.js"></script>
-<!-- <script src="./admin.js"></script> -->
-<script src="./main.js"></script>
+<script src="./alterar.js"></script>
 <script src="./sugestao.js"></script>
 <script src="./script.js"></script>
 </html>
