--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
   <section class="escala" id="escala" aria-label="Escala">
     <div class="escala-titulo">
       <h3 class="tituloh3">escala<span class="decoration">.</span></h3>
-      <span class="data">16/07/2023</span>
+      <span class="data"></span>
     </div>
 
     <ul class="escala-lista">
-     
+    <!-- OS DADOS SERÃO INSERIDOS PELA PAGINA DE ADMIN -->
     </ul>
   </section>
 
