--- a/login.html
+++ b/login.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login Page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Louvor JK | Login</title>
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <h1>Login Page</h1>
+  <div class="loginBg">
 
-  <div id="loginForm">
-    <input type="email" id="emailInput" placeholder="Email">
-    <input type="password" id="passwordInput" placeholder="Password">
-    <button onclick="login()">Login</button>
+    <div class="login">
+      <h1>Louvor IPJK</h1>
+  <div id="loginForm" class="loginForm">
+    <div>
+      <label for="emailInput">Email</label>
+      <input type="email" id="emailInput" required>
+    </div>
+    <div>
+      <label for="passwordInput">Senha</label>
+      <input type="password" id="passwordInput">
+    </div>
+    <button class="botaoLogin" onclick="login()">Entrar</button>
   </div>
-
+</div>
+  
+</div>
+  
+  
   <script src="./config.js"></script>
   <script src="./login.js"></script>
 </body>
