finalizado pag login e admin

--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
       <div id="updateForm" class="updateForm">
         <h2>Atualizar Escala</h2>
         <div id="updateDateForm" class="updateDate">
-          <input type="date" id="dateInput">
+          <input type="date" id="dateInput" class="dateInput">
           <button class="botao" onclick="updateDate()">Atualizar Data</button>
         </div>
         
