--- a/admin.html
+++ b/admin.html
@@ -17,10 +17,12 @@
     <div class="admin">
       <h1>Controle Louvor</h1>
       <div id="updateForm" class="updateForm">
+        <div>
         <h2>Atualizar Escala</h2>
         <div id="updateDateForm" class="updateDate">
           <input type="date" id="dateInput" class="dateInput">
           <button class="botao" onclick="updateDate()">Atualizar Data</button>
+        </div>
         </div>
         
         <div class="selectForm">
