desativado pop up aviso

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="./css/style.min.css"> -->
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/introducaoAviso.css">
+  <!-- <link rel="stylesheet" href="./css/introducaoAviso.css"> -->
   <link rel="stylesheet" href="./css/popup.css">
   <link rel="icon" href="./svg/ipb favicon.svg" type="image/svg+xml">
   <title>Igreja Presbiteriana JK</title>
 </head>
 
 <body>
+
+<!--   
   <div id="overlay" class="overlay"></div>
   <div id="popup" class="popup">
     <div class="popup-content introducaoAviso">
@@ -23,7 +25,7 @@
         <button id="close-btn" class="botaoAviso">OK</button>
       </div>
     </div>
-    
+     -->
     <header class="header-bg">
       <div class="header">
         <div class="header-imagem">
