--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
         <h1>Login</h1>
       </div>
       <div class="form">
-        <form action="#">
+        <form action="" id="loginForm">
           <div class="input">
             <label for="email">E-Mail</label>
             <input class="email" type="email" id="email" name="email"required>
@@ -31,8 +31,8 @@
         <div class="buttonDiv">
           <a href="#">Esqueci minha senha</a>
           <button onclick="login()">Entrar</button>
-        </form>
       </div>
+    </form>
     </div>
     
     <div class="loginContent">
