--- a/login.html
+++ b/login.html
@@ -37,13 +37,13 @@
     
     <div class="loginContent">
       <div class="contentTitle">
-        <h2>Bem vindo à Igreja Presbiteriana do Jk</h2>
+        <h2>Igreja Presbiteriana do Jk</h2>
       </div>      
       <div class="contentDescription">
         <p>
           Esta página é utilizada para acessar o controle da equipe de música da Igreja Presbiteriana do Jk. <br> <br>
         </p>
-        <a href="https://www.google.com/maps/place/Igreja+Presbiteriana+de+JK/@-19.5098849,-42.6294089,17z/data=!3m1!4b1!4m6!3m5!1s0xa5542a532dd077:0xd9de342a2ee3fc15!8m2!3d-19.50989!4d-42.626834!16s%2Fg%2F1tt1txzt?authuser=0&entry=ttu" target="_blank">Localizada na R. Joaquim Gomes da Silveira Neto, 258 - Júlia Kubitschek, Cel. Fabriciano - MG, 35171-095</a>
+        <a href="https://www.google.com/maps/place/Igreja+Presbiteriana+de+JK/@-19.5098849,-42.6294089,17z/data=!3m1!4b1!4m6!3m5!1s0xa5542a532dd077:0xd9de342a2ee3fc15!8m2!3d-19.50989!4d-42.626834!16s%2Fg%2F1tt1txzt?authuser=0&entry=ttu" target="_blank">Google Maps <br> <br>Rua Joaquim Gomes da Silveira Neto, 258 - Júlia Kubitschek, Cel. Fabriciano - MG, 35171-095</a>
       </div>
       <div class="contentFooter">
       <div class="contentMap"> 
