algumas correções responsivo

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
         </div>
         
         <div class="buttonDiv">
-          <a href="#">Esqueci minha senha</a>
+          <a href="#">Esqueçi minha senha</a>
           <button onclick="login()">Entrar</button>
       </div>
     </form>
