algumas correções responsivo

--- a/login.html
+++ b/login.html
@@ -18,21 +18,20 @@
       </div>
       <div class="form">
         <form action="" id="loginForm">
-          <div class="input">
+          <div class="inputContainer">
             <label for="email">E-Mail</label>
             <input class="email" type="email" id="email" name="email"required>
           </div>
-          <div class="input">
+          <div class="inputContainer">
             <label for="password">Senha</label>
             <input class="password" type="password" id="password" name="password" required>
           </div>
         </div>
-        
         <div class="buttonDiv">
           <a href="#">Esqueçi minha senha</a>
           <button onclick="login()">Entrar</button>
-      </div>
-    </form>
+        </div>
+      </form>
     </div>
     
     <div class="loginContent">
@@ -41,14 +40,14 @@
       </div>      
       <div class="contentDescription">
         <p>
-          Esta página é utilizada para acessar o controle da equipe de música da Igreja Presbiteriana do Jk <br>
+          Esta página é utilizada para acessar o controle da equipe de música da Igreja Presbiteriana do Jk
         </p>
         <a href="https://www.google.com/maps/place/Igreja+Presbiteriana+de+JK/@-19.5098849,-42.6294089,17z/data=!3m1!4b1!4m6!3m5!1s0xa5542a532dd077:0xd9de342a2ee3fc15!8m2!3d-19.50989!4d-42.626834!16s%2Fg%2F1tt1txzt?authuser=0&entry=ttu" target="_blank">Google Maps <br> <br>Rua Joaquim Gomes da Silveira Neto, 258 - Júlia Kubitschek, Cel. Fabriciano - MG, 35171-095</a>
       </div>
       <div class="contentFooter">
-      <div class="contentMap"> 
-        <a href="https://presbiterianajk.github.io/" target="_blank">Acessar o site</a>
-      </div>
+        <div class="contentButton"> 
+          <a href="https://presbiterianajk.github.io/" target="_blank">Acessar o site</a>
+        </div>
       </div>  
     </div>
   </div>
