algumas alterações login responsivo

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="buttonDiv">
-          <a href="#">Esqueçi minha senha</a>
+          <a href="#">Esqueci minha senha</a>
           <button onclick="login()">Entrar</button>
         </div>
       </form>
