--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <main class="loginBg">
-  <div class="container">
+  <div class="loginContainer">
     <div class="loginForm">
       <div class="loginTitle">
         <h1>Login</h1>
