removido pop up index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <div id="overlay" class="overlay"></div>
+  <!-- <div id="overlay" class="overlay"></div>
   <div id="popup" class="popup">
     <div class="popup-content introducaoAviso">
       <h3 class="tituloAviso"> comunicado.</h3>
@@ -26,7 +26,7 @@
         <button id="close-btn" class="botaoAviso">OK</button>
       </div>
     </div>
-    
+     -->
     <header class="header-bg">
       <div class="header">
         <div class="header-imagem">
